Upgrade to Java 17 + minor refactorings (#54)
* Upgrade to Java 17 + minor refactorings